# aip

./: .gitignore  README.md  aip.cabal  aip.nix  changelog  changelog.md  default.nix
ci/: ci.nix  jobsets.json  jobsets.nix
etc/: aip.html
src/: Main.hs
src-exe/: Main.hs
src/Data/Aviation/: Aip.hs
src/Data/Aviation/Aip/: AfterDownload.hs  AipCon.hs  AipContents.hs  AipDate.hs  AipDocument.hs  AipDocuments.hs  AipHref.hs  AipOptions.hs  AipPg.hs  AipRecord.hs  AipRecords.hs  Aip_SUP_and_AIC.hs  Aip_SUP_and_AICs.hs  Amendment.hs  Cache.hs  ConnErrorHttp4xx.hs  DAPDoc.hs  DAPDocs.hs  DAPEntries.hs  DAPEntry.hs  DAPType.hs  Day.hs  DocumentNumber.hs  Ersa.hs  ErsaAerodrome.hs  ErsaAerodromes.hs  Ersas.hs  Href.hs  HttpRequest.hs  ListItemLink.hs  ListItemLinks.hs  ListItemLinks1.hs  Log.hs  Month.hs  OnAipRecords.hs  PerHref.hs  Processing.hs  RunAipRecords.hs  SHA1.hs  Title.hs  (+2 more)
