name:               aip
version:            0.0.1
license:            BSD3
license-file:       LICENCE
author:             Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:         Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:          Copyright (c) 2018, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
synopsis:           Aeronautical Information Package (AIP)
category:           Data, Aviation
description:       
  <<http://i.imgur.com/uZnp9ke.png>>
  .
  Document management for the airservices Aeronautical Information Package (AIP).
homepage:           https://github.com/qfpl/aip
bug-reports:        https://github.com/qfpl/aip/issues
cabal-version:      >= 1.10
build-type:         Simple
extra-source-files: changelog

source-repository   head
  type:             git
  location:         git@github.com:qfpl/aip.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    , HTTP >= 4000 && < 5000
                    , network-uri >= 2.6 && < 3
                    , tagsoup >= 0.13 && < 0.15
                    , tagsoup-selection >= 0.1 && < 0.2
                    , transformers >= 0.5 && < 0.6
                    , parsers >= 0.12 && < 0.13
                    , parsec >= 3.1 && < 3.2
                    , digit >= 0.5 && < 0.6
                    , bytestring >= 0.10 && < 0.11
                    , filepath >= 1.4 && < 1.5
                    , directory >= 1.3 && < 1.4
                    , lens >= 4 && < 5
                    , papa >= 0.3 && < 0.4
                    , time >= 1.6 && < 1.9
                    , utf8-string
                    , Crypto
                    , aeson
                    , vector
                    , unordered-containers
                    , text
                    , iso8601-time
                    , aeson-pretty

  ghc-options:
                    -Wall

  default-extensions:
  
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.Aviation.Aip
                    Data.Aviation.Aip.Aip_SUP_and_AIC
                    Data.Aviation.Aip.Aip_SUP_and_AICs
                    Data.Aviation.Aip.AipDocument
                    Data.Aviation.Aip.AipDocuments
                    Data.Aviation.Aip.AipRecord
                    Data.Aviation.Aip.AipRecords
                    Data.Aviation.Aip.ConnErrorHttp4xx
                    Data.Aviation.Aip.DAPDoc
                    Data.Aviation.Aip.DAPDocs
                    Data.Aviation.Aip.DAPEntries
                    Data.Aviation.Aip.DAPEntry
                    Data.Aviation.Aip.DAPType
                    Data.Aviation.Aip.Ersa
                    Data.Aviation.Aip.ErsaAerodrome
                    Data.Aviation.Aip.ErsaAerodromes
                    Data.Aviation.Aip.HttpRequest
                    Data.Aviation.Aip.ListItemLink
                    Data.Aviation.Aip.ListItemLinks
                    Data.Aviation.Aip.ListItemLinks1
                    Data.Aviation.Aip.SHA1


executable          aip
  main-is:
                    Main.hs

  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    , aip
                    , HTTP >= 4000 && < 5000
                    , network-uri >= 2.6 && < 3
                    , tagsoup >= 0.13 && < 0.15
                    , tagsoup-selection >= 0.1 && < 0.2
                    , transformers >= 0.5 && < 0.6
                    , parsers >= 0.12 && < 0.13
                    , parsec >= 3.1 && < 3.2
                    , digit >= 0.5 && < 0.6
                    , bytestring >= 0.10 && < 0.11
                    , filepath >= 1.4 && < 1.5
                    , directory >= 1.3 && < 1.4
                    , lens >= 4 && < 5
                    , papa >= 0.3 && < 0.4
                    , time >= 1.6 && < 1.9
                    , process >= 1.6 && < 2.0
                    , exitcode >= 0.1.0.0 && < 1.0     
                    , utf8-string
                    , Crypto
                    , aeson
                    , vector
                    , unordered-containers
                    , text
                    , iso8601-time
                    , aeson-pretty
                    
  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    src

test-suite          tests

  build-depends:      QuickCheck >=2.9.2 && <2.11
                    , base >=4.8 && < 5
                    , checkers >=0.4.6 && <0.5
                    , aip
                    , lens >=4.15 && <4.16
                    , tasty >=0.11 && <0.12
                    , tasty-hunit >=0.9 && <0.10
                    , tasty-quickcheck >=0.8.4 && <0.10

  type:             
                    exitcode-stdio-1.0

  main-is:          
                    Tests.hs

  hs-source-dirs:   
                    test

  default-language: 
                    Haskell2010

  ghc-options:       
                    -Wall
